--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link
-  href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap"
-  rel="stylesheet"
-/>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Reenie+Beanie&display=swap" rel="stylesheet">
     <title>Jiwon Bae</title>
   </head>
   <body>
