Contacts working and done. Just need to work on the icon

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-<link href="https://fonts.googleapis.com/css2?family=Gaegu&family=Jua&family=Fredoka:wght@300..700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Gaegu&family=Jua&family=Fredoka:wght@300..700&family=GFS+Neohellenic:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <title>Jiwon Bae</title>
   </head>
   <body>
